<resources>
    <string name="app_name">AAC Board</string>
    <string name="action_dashboards">Dashboards</string>
    <string name="main_dashboard">Main Dashboard</string>
    <string name="select_dashboard">Select your preferred dashboard from the list</string>
    <string name="create_dashboard">Create your first panel of pictograms</string>
    <string name="new_dashboard">New dashboard</string>
    <string name="query_string">Query string</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="serverError">Server error: %d</string>
    <string name="connectivityError">Connectivity error</string>
    <string name="unknownError">Unknown error</string>
    <string name="noMatchFoundError">No pictogram found for the requested search</string>
    <string name="text">Text</string>
    <string name="column_label">Column</string>
    <string name="row_label">Row</string>
    <string name="editCell">Edit Cell</string>
    <string name="picto_description">Cell pictogram</string>
    <string name="search_arasaac">Search Arasaac</string>
    <string name="new_dashboard_toolbar">New Dashboard</string>
    <string name="new_dashboard_name">Name</string>
    <string name="new_dashboard_number_of_columns">Columns</string>
    <string name="new_dashboard_number_of_rows">Rows</string>
    <string name="new_dashboard_save">Edit</string>
    <string name="new_dashboard_error">Some fields are empty, please fill in all fields</string>
    <string name="new_dashboard_detail_accept">Accept</string>
    <string name="new_dashboard_detail_delete">Delete</string>
    <string name="new_dashboard_detail_toolbar_title">Edit %1$s board</string>
    <string name="new_dashboard_create">Create</string>
    <string name="dashboard_input_name_error">Missing dashboard name</string>
    <string name="dashboard_input_columns_error">Missing valid number of columns</string>
    <string name="dashboard_input_rows_error">Missing valid number of rows</string>
</resources>