<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_dashboard_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/new_dashboard_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_dashboard_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_dashboard_columns"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_dashboard_number_of_columns"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/text_input_dashboard_rows"
        app:layout_constraintEnd_toStartOf="@id/iv_new_dashboard_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_new_dashboard_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_dashboard_columns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="1"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_dashboard_rows"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_dashboard_number_of_rows"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@id/iv_new_dashboard_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_dashboard_columns">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_dashboard_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="1"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_new_dashboard_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_dashboard_name"
        app:srcCompat="@drawable/ic_image_search" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/iv_new_dashboard_image"
        app:layout_constraintEnd_toEndOf="@id/iv_new_dashboard_image"
        app:layout_constraintStart_toStartOf="@id/iv_new_dashboard_image"
        app:layout_constraintTop_toTopOf="@id/iv_new_dashboard_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_new_dashboard_cancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_new_dashboard_save"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/purple_500" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_new_dashboard_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:text="@string/new_dashboard_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_new_dashboard_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>