<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/main_dashboard_dest">

    <fragment
        android:id="@+id/main_dashboard_dest"
        android:name="com.architectcoders.aacboard.ui.fragments.MainDashboardFragment"
        android:label="MainDashboardFragment"
        tools:layout="@layout/fragment_main_dashboard">
        <action
            android:id="@+id/action_mainDashboard_to_listDashboards"
            app:destination="@id/list_dashboards_dest"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/list_dashboards_dest"
        android:name="com.architectcoders.aacboard.ui.fragments.ListDashboardsFragment"
        android:label="ListDashboardsFragment"
        tools:layout="@layout/fragment_list_dashboards">
        <action
            android:id="@+id/action_listDashboards_to_newDashboard"
            app:destination="@id/new_dashboard_dest"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_listDashboards_to_editDashboard"
            app:destination="@id/edit_dashboard_dest"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/list_dashboards_dest" />
    </fragment>
    <fragment
        android:id="@+id/new_dashboard_dest"
        android:name="com.architectcoders.aacboard.ui.fragments.NewDashboardFragment"
        android:label="@string/new_dashboard_toolbar"
        tools:layout="@layout/fragment_new_dashboard">
        <action
            android:id="@+id/action_newDashboard_to_editDashboard"
            app:destination="@id/edit_dashboard_dest"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_new_dashboard_dest_to_searchPictogramsFragment"
            app:destination="@id/searchPictogramsFragment" />
    </fragment>
    <fragment
        android:id="@+id/edit_dashboard_dest"
        android:name="com.architectcoders.aacboard.ui.fragments.EditDashboardFragment"
        android:label="EditDashboardFragment"
        tools:layout="@layout/fragment_edit_dashboard">
        <action
            android:id="@+id/action_editDashboard_to_editBoardCell"
            app:destination="@id/edit_board_cell_dest"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/edit_board_cell_dest"
        android:name="com.architectcoders.aacboard.ui.fragments.EditBoardCellFragment"
        android:label="@string/editCell"
        tools:layout="@layout/fragment_edit_board_cell">
        <action
            android:id="@+id/action_editBoardCell_to_mainDashboard"
            app:destination="@id/main_dashboard_dest"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/edit_board_cell_dest"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_editBoardCell_to_searchPictograms"
            app:destination="@id/searchPictogramsFragment" />
        <argument
            android:name="dashboardId"
            android:defaultValue="1"
            app:argType="integer" />
        <argument
            android:name="row"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="column"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/new_pictogram_dest"
        android:name="com.architectcoders.aacboard.ui.fragments.NewPictogramFragment"
        android:label="NewPictogramFragment"
        tools:layout="@layout/fragment_new_pictogram" />
    <fragment
        android:id="@+id/searchPictogramsFragment"
        android:name="com.architectcoders.aacboard.ui.fragments.SearchPictogramsFragment"
        android:label="@string/search_arasaac"
        tools:layout="@layout/fragment_search_pictograms" />
</navigation>